# custom_receipt

./: README.md  pyproject.toml
custom_receipt/: hooks.py  modules.txt
custom_receipt/custom_receipt/doctype/addition_or_deduction_details/: addition_or_deduction_details.json  addition_or_deduction_details.py
custom_receipt/custom_receipt/doctype/custom_receipt_details/: custom_receipt_details.json  custom_receipt_details.py
custom_receipt/custom_receipt/doctype/custom_receipt_voucher/: custom_receipt_voucher.js  custom_receipt_voucher.json  custom_receipt_voucher.py  test_custom_receipt_voucher.py
custom_receipt/custom_receipt/doctype/sales_rebate_allocator/: sales_rebate_allocator.js  sales_rebate_allocator.json  sales_rebate_allocator.py  test_sales_rebate_allocator.py
custom_receipt/custom_receipt/doctype/sales_rebate_allocator_details/: sales_rebate_allocator_details.json  sales_rebate_allocator_details.py
