[project]
name = "custom_receipt"
authors = [
    { name = "Aadhil", email = "aadhil@badeeltechnology.com"}
]
description = "This app allows to record centralized payment from Group company and create Bank Entry voucher connecting each branch"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
